ADD: section de apresentacao

--- a/src/components/homeNoAuth/headerNoAuth/styles.module.scss
+++ b/src/components/homeNoAuth/headerNoAuth/styles.module.scss
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 150px;
+  padding: 1.25rem 9.375rem;
 }
 .imgLogoNav {
   width: 180px;
