--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,9 +15,9 @@ main {
   width: 8px;
 }
 ::-webkit-scrollbar-track {
-  background: #151515;
+  background: #ffffff;
 }
 ::-webkit-scrollbar-thumb {
-  background: #868686;
+  background: #19d366;
   border-radius: 40px;
 }
