--- a/src/components/homeNoAuth/headerNoAuth/styles.module.scss
+++ b/src/components/homeNoAuth/headerNoAuth/styles.module.scss
@@ -1,22 +1,6 @@
 @import "../../../../styles/colors.module.scss";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
-.header {
-  box-shadow: 0px 5px 16px 0px rgba(0, 27, 11, 0.05);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1.25rem 9.375rem;
-}
-.imgLogoNav {
-  width: 180px;
-}
-
-.nav {
-  display: flex;
-  gap: 0.625rem;
-}
-
 .navBtn {
   border-color: transparent;
   border-radius: 8px;
@@ -40,21 +24,8 @@
   background: $limeGreen;
 
   &:hover {
-    background: #001b0b;
+    background: $darkGreen;
     color: $limeGreen;
     transition: 0.5s;
-  }
-}
-
-@media (max-width: 792px) {
-  .header {
-    padding: 20px 30px;
-  }
-}
-
-@media (max-width: 540px) {
-  .header {
-    flex-direction: column;
-    gap: 1.3rem;
   }
 }
