CHANGES: alterações gerais

--- a/src/components/HomeNoAuth/TouristSpotSection/styles.module.scss
+++ b/src/components/HomeNoAuth/TouristSpotSection/styles.module.scss
@@ -2,6 +2,10 @@
   height: 41.96875rem;
 }
 
-.sectionBackgroundTouristSpot {
+.greenBackground {
   background: #0a100c;
+}
+
+.yellowBackground {
+  background: yellow;
 }
