--- a/src/components/homeNoAuth/headerNoAuth/styles.module.scss
+++ b/src/components/homeNoAuth/headerNoAuth/styles.module.scss
@@ -1,6 +1,10 @@
 @import "../../../../styles/colors.module.scss";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
+.imgLogoProjeto {
+  cursor: pointer;
+}
+
 .navBtn {
   border-color: transparent;
   border-radius: 8px;
