--- a/src/components/HomeNoAuth/LocationSection/styles.module.scss
+++ b/src/components/HomeNoAuth/LocationSection/styles.module.scss
@@ -18,4 +18,12 @@
       font-size: 16px;
     }
   }
+
+  h2.whiteText {
+    color: white;
+  }
+}
+
+.withBackground {
+  background: #0a100c;
 }
