--- a/src/components/homeNoAuth/headerNoAuth/styles.module.scss
+++ b/src/components/homeNoAuth/headerNoAuth/styles.module.scss
@@ -5,6 +5,20 @@
   cursor: pointer;
 }
 
+.iconBeer {
+  width: 32px;
+  // background-color: #000;
+  height: 32px;
+  
+}
+
+.robotoFont {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 20px;
+  cursor: pointer;
+}
+
 .greenBackground {
   background: $limeGreen;
   &:hover {
